fix subscribe button UI bug on iOS

--- a/src/components/BlogHeader/index.sass
+++ b/src/components/BlogHeader/index.sass
@@ -59,6 +59,7 @@
         font-family: ProximaNovaBold
         color: $darkGray
         @include responsive($screen: mobile)
+            white-space: nowrap
             width: 164px
             height: 40px
             font-size: 14px
